fix slashless URL

--- a/88-timelapse1090.conf
+++ b/88-timelapse1090.conf
@@ -7,7 +7,7 @@ alias.url += (
 
 # redirect the slash-less URL
 url.redirect += (
-  "^/timelapse1090$" => "/timelapse1090/"
+  "^/timelapse$" => "/timelapse/"
 )
 
 $HTTP["url"] =~ "timelapse/data/chunk_.*gz$" {
