Change json handling and other changes

--- a/88-timelapse1090.conf
+++ b/88-timelapse1090.conf
@@ -15,7 +15,7 @@ $HTTP["url"] =~ "timelapse/data/chunk_.*gz$" {
         "Access-Control-Allow-Origin" => "*",
         "Cache-Control" => "must-revalidate",
         "Content-Encoding" => "gzip",
-        "Content-Type" => "text/plain",
+        "Content-Type" => "application/json",
         )
 }
 
