fix readme URL, add URL aliases

--- a/88-timelapse1090.conf
+++ b/88-timelapse1090.conf
@@ -7,7 +7,9 @@ alias.url += (
 
 # redirect the slash-less URL
 url.redirect += (
-  "^/timelapse$" => "/timelapse/"
+  "^/timelapse$" => "/timelapse/",
+  "^/timelapse1090$" => "/timelapse/",
+  "^/timelapse1090/$" => "/timelapse/",
 )
 
 $HTTP["url"] =~ "timelapse/data/chunk_.*gz$" {
