--- a/88-timelapse1090.conf
+++ b/88-timelapse1090.conf
@@ -12,7 +12,7 @@ url.redirect += (
   "^/timelapse1090/$" => "/timelapse/",
 )
 
-$HTTP["url"] =~ "timelapse/data/chunk_.*gz$" {
+$HTTP["url"] =~ "^/timelapse/data/chunk_.*gz$" {
     setenv.add-response-header += (
         "Access-Control-Allow-Origin" => "*",
         "Cache-Control" => "must-revalidate",
