--- a/timelapse1090.service
+++ b/timelapse1090.service
@@ -6,7 +6,7 @@ Wants=network.target
 After=network.target
 
 [Service]
-User=dump1090
+User=timelapse1090
 RuntimeDirectory=timelapse1090
 RuntimeDirectoryMode=0755
 EnvironmentFile=/etc/default/timelapse1090
